compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__no_body_or_implementation.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 201
expression: "\npub fn one(x: Int) -> Int\n"
---
error: Function without an implementation
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn one(x: Int) -> Int
  │ ^^^^^^^^^^^^^^^^^^

We can't compile this function as it doesn't have an
implementation. Add a body or an external implementation
using the `@external` attribute.

